add get all and remove ids from json
