# api/handlers/db_handler.py
@@ -11,14 +11,14 @@ def close_connection(client):
     client.close()
 
 
-def save_to_mongodb(client, student_id, problem_id, programming_language, code):
+def save_to_mongodb(client, appointment_id, programming_language, code):
     try:
         db = client["codes"]
         collection = db["problems"]
 
-        existing_assignment = collection.find_one({"student_id": student_id, "problem_id": problem_id})
+        existing_assignment = collection.find_one({"appointmentId": appointment_id})
 
-        if programming_language == "c" or programming_language == "cpp" or programming_language == "java":
+        if programming_language in ["c", "cpp", "java"]:
             return_type, function_name, arguments = parse_c_code(code)
         else:
             print(f"Unsupported programming language: {programming_language}")
@@ -27,19 +27,18 @@ def save_to_mongodb(client, student_id, problem_id, programming_language, code):
         if existing_assignment:
             update_data = {
                 "$set": {
-                    "programming_language": programming_language,
+                    "programmingLanguage": programming_language,
                     "code": code
                 }
             }
             collection.update_one({"_id": existing_assignment["_id"]}, update_data)
         else:
             assignment_data = {
-                "student_id": student_id,
-                "problem_id": problem_id,
-                "programming_language": programming_language,
+                "appointmentId": appointment_id,
+                "programmingLanguage": programming_language,
                 "code": code,
-                "function_name": function_name,
-                "return_type": return_type,
+                "functionName": function_name,
+                "returnType": return_type,
                 "arguments": arguments
             }
             collection.insert_one(assignment_data)
@@ -50,15 +49,14 @@ def save_to_mongodb(client, student_id, problem_id, programming_language, code):
         return False
 
 
-def get_problem_by_student(client, student_id, problem_id):
+def get_problem_by_student(client, appointment_id):
     try:
         db = client["codes"]
         collection = db["problems"]
-        problem = collection.find_one({"student_id": student_id, "problem_id": problem_id})
+        problem = collection.find_one({"appointmentId": appointment_id})
         return problem
     
     except Exception as e:
         print(f"Error while getting problem from MongoDB: {str(e)}")
         return None
-    #todo: коллекция для заданий.
     
